GH-419 Fix Suggestion#of and number formatting. (#419)